posiGen_FullsendBox/src/objects/LeaseHerokuapp__c.object
<CustomObject>
    <fields>
        <fullName>A_R_Outstanding__c</fullName>
        <label>A_R_Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ach_Debit__c</fullName>
        <label>Ach_Debit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Date__c</fullName>
        <label>Age_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alpha_Code__c</fullName>
        <label>Alpha Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Not_Due__c</fullName>
        <label>Billed_Not_Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Past_Due__c</fullName>
        <label>Billed_Past_Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_1__c</fullName>
        <label>Billing_Address_1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2__c</fullName>
        <label>Billing_Address_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing_City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Name__c</fullName>
        <label>Billing_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing_State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing_Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <label>Book_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_No__c</fullName>
        <label>Contract No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curr_Ft_Rent_Rec__c</fullName>
        <label>Curr_Ft_Rent_Rec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <label>Customer No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <label>Days_Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Reason__c</fullName>
        <label>Default Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Correction - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default – Agrees to Auto-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default - Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default – Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default – Payment Plan (not Payment Restructuring)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Assumed Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – EE problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – Low Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service – Roof damage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deferred_Months__c</fullName>
        <label>Deferred_Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disconnect_Status__c</fullName>
        <label>Disconnect Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Customer_Numbers_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Customer Numbers Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down_Payment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <label>Due_Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Month_Delinquent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Month Delinquent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Been_Boarded__c</fullName>
        <formula>IF( ISNULL( Name ) , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Been Boarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Serv_Date__c</fullName>
        <label>In_Serv_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_Name__c</fullName>
        <label>Industry_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Account_Activity_Date__c</fullName>
        <label>Last Account Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Call_Comment__c</fullName>
        <label>Last Call Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Type__c</fullName>
        <label>Last Call Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Interaction_Date__c</fullName>
        <label>Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interaction__c</fullName>
        <label>Last Interaction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Category__c</fullName>
        <label>Lease Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Code__c</fullName>
        <label>Lease Code</label>
        <picklist>
            <picklistValues>
                <fullName>Bankrupcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lst_Pmt_Mde_Date__c</fullName>
        <label>Lst_Pmt_Mde_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Pay_Due_Dte__c</fullName>
        <label>Next_Pay_Due_Dte</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Equip_Cost__c</fullName>
        <label>Orig_Equip_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Pmts__c</fullName>
        <label>Original_Pmts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due121_150__c</fullName>
        <label>Past_Due121_150</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due151_180__c</fullName>
        <label>Past_Due151_180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due181_210__c</fullName>
        <label>Past_Due181_210</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Over180__c</fullName>
        <label>Past_Due_Over180</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Over360__c</fullName>
        <label>Past_Due_Over360</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodic_Rent__c</fullName>
        <label>Periodic_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recurring_Chgs__c</fullName>
        <label>Recurring_Chgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_01__c</fullName>
        <label>Rem_Pmts1_12_01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_02__c</fullName>
        <label>Rem_Pmts1_12_02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts1_12_03__c</fullName>
        <label>Rem_Pmts1_12_03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Over5__c</fullName>
        <label>Rem_Pmts_Over5</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year2__c</fullName>
        <label>Rem_Pmts_Year2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year3__c</fullName>
        <label>Rem_Pmts_Year3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rem_Pmts_Year4__c</fullName>
        <label>Rem_Pmts_Year4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Months__c</fullName>
        <label>Remaining_Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Pmts__c</fullName>
        <label>Remaining_Pmts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended_Date__c</fullName>
        <label>Suspended_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspense__c</fullName>
        <label>Suspense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_On_Rent__c</fullName>
        <label>Tax_On_Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <label>Termination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Lr__c</fullName>
        <label>Total_Billed_Lr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Curr_Recv__c</fullName>
        <label>Total_Curr_Recv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Late_Fees__c</fullName>
        <label>Total_Late_Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Not_Due__c</fullName>
        <label>Total_Not_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Chgs__c</fullName>
        <label>Total_Other_Chgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Lr__c</fullName>
        <label>Total_Paid_Lr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Past_Due__c</fullName>
        <label>Total_Past_Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche__c</fullName>
        <label>Tranche</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsuspended_Date__c</fullName>
        <label>Unsuspended_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Full_Payment__c</fullName>
        <label>1st_Full_Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Pmt_Date__c</fullName>
        <label>1st_Pmt_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Non_Zero_Pmt__c</fullName>
        <label>2nd_Non_Zero_Pmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LeaseHerokuapp</label>
    <nameField>
        <label>LeaseHerokuapp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaseHerokuapps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>